--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.9.4",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=2025 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
